style.css
:root {
  /* COLOR PALETTE */
  /* lighter purple */
  --primary-dark-50: hsla(271, 12%, 34%, 1);
  /* darker purple */
  --primary-dark-100: hsla(273, 85%, 13%, 1);
  /* white */
  --primary-light-50: hsla(0, 0%, 100%, 1);
  /* bright green */
  --primary-light-100: hsla(150, 100%, 63%, 1);

  /* FONTS */
  --font-primary: "Fraunces", serif;
  --font-secondary: "Manrope", sans-serif;

  /* FONT SIZES */
  /* 8px */
  --fs-50: 0.5rem;
  /* 16px */
  --fs-100: 1rem;
  /* 18px */
  --fs-150: 1.125rem;
  /* 20px */
  --fs-200: 1.25rem;
  /* 24px */
  --fs-250: 1.5rem;
  /* 28px */
  --fs-275: 1.75rem;
  /* 32px */
  --fs-300: 2rem;
  /* 48px */
  --fs-400: 3rem;
  /* 56px */
  --fs-500: 3.5rem;
  /* 60px */
  --fs-600: 3.75rem;
  /* 64px */
  --fs-650: 4rem;
  /* 80px */
  --fs-800: 5rem;

  /* FONT WEIGHTS */
  /* 400 */
  --fw-regular: 400;
  /* 600 */
  --fw-semi-bold: 600;
  /* 700 */
  --fw-bold: 700;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* header {
  background-color: var(--primary-dark-100);
} */

html,
body {
  margin: 0;
  /* padding: 0;
  width: 100%;
  height: 100%; */
}

img {
  max-width: 100%;
}

.container {
  width: 90%;
  margin: 0 auto;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 32px;
}

.nav-btn {
  cursor: pointer;
  border: 0;
  background-color: var(--primary-dark-100);
  font-family: var(--font-secondary);
  color: var(--primary-light-50);
  font-size: var(--fs-150);
  font-weight: var(--fw-bold);
  line-height: 180%;
  border-bottom: 2px solid var(--primary-light-100);
  padding: 0;
  /* border-bottom: 10em; */
}

.nav-btn:hover {
  color: var(--primary-light-100);
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2.5rem;
  padding: 3.5rem 1.25rem 9rem;
}

.hero-title {
  font-family: var(--font-primary);
  font-size: var(--fs-400);
  font-weight: var(--fw-semi-bold);
  line-height: 100%;
  margin: 0;
  text-align: center;
  color: var(--primary-light-50);
}

.accent {
  position: relative;
}

#underline::after {
  content: "";
  position: absolute;
  width: 100%;
  border-bottom: solid 3px var(--primary-light-100);
  bottom: 0.3rem;
  left: 0rem;
}

.btn {
  display: flex;
  justify-self: center;
  align-items: center;
  cursor: pointer;
  border: none;
  /* color: var(--primary-light-100); */
  background: var(--primary-light-100);
  padding: 0.75rem 2rem;
  font-family: var(--font-secondary);
  font-size: var(--fs-100);
  font-weight: var(--fw-bold);
  color: var(--primary-dark-100);
}

.iphone__img {
  /* margin-top: 80px; */
  /* position: ; */
  width: 320.018px;
  height: 184px;
}

/* .ornamental {
  align-self: stretch;
  height: 24px;
  width: 100%;
} */

.services {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* align-self: stretch; */
  padding: var(--fs-650) var(--fs-200);
  /* gap: var(--fs-50); */
}

.services__section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.service__item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-bottom: var(--fs-300);
}

.service__item:last-child {
  margin-bottom: 0;
}

.number {
  display: flex;
  /* flex-direction: column; */
  justify-content: center;
  align-items: center;
  /* align-self: center; */
  gap: var(--fs-50);
  width: 48px;
  height: 48px;
  border-radius: 99px;
  border: 1px solid var(--primary-dark-50);
  font-family: var(--font-primary);
  font-size: var(--fs-200);
  font-weight: var(--fw-semi-bold);
  font-style: normal;
  /* gap: var(--fs-250); */
  /* line-height: 40px; */
  /* text-align: center; */
}

.section__title {
  display: flex;
  margin: 24px 0 16px;
  color: var(--primary-dark-100);
  font-family: var(--font-primary);
  font-size: var(--fs-250);
  font-style: normal;
  font-weight: var(--fw-semi-bold);
  line-height: 120%;
  /* gap: var(--fs-200); */
}

.section__content {
  margin: 0;
  color: var(--primary-dark-100);
  font-family: var(--font-secondary);
  font-size: var(--fs-100);
  font-style: normal;
  font-weight: var(--fw-regular);
  line-height: 180%;
}

.cta {
  padding-top: 112px;
}

#portrait__img {
  position: relative;
  z-index: -1;
  top: 4rem;
}

.cta__info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 32px;
  padding: var(--fs-300);
  background: var(--primary-dark-100);
  color: var(--primary-light-50);
  align-self: stretch;
}

.cta__title {
  margin: 0;
  font-family: var(--font-primary);
  /* font-size: var(--fs-300); */
  font-size: var(--fs-275);
  font-style: normal;
  /* font-weight: var(--fw-semi-bold); */
  font-weight: var(--fw-regular);
  line-height: 120%;
  /* text-align: left; */
}

.cta__paragraph {
  margin: 0;
  text-align: center;
  font-family: var(--font-secondary);
  font-size: var(--fs-100);
  font-style: normal;
  font-weight: var(--fw-regular);
  line-height: 180%;
}

footer {
  /* display: flex;
  justify-content: center;
  align-items: center; */
  padding: 80px;
}

.footer__content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 56px;
}

.social__logos {
  display: flex;
  justify-content: center;
  gap: 1.75rem;
}

/* UTILITY CLASSES */
.bg--dark {
  background: var(--primary-dark-100);
}
/* TABLETS */
/* @media (min-width: 700px) {

} */

/* DESKTOP */
/* @media (min-width: 1000px) {

} */

